--- a/src/component/base.css
+++ b/src/component/base.css
@@ -18,3 +18,39 @@ table { border-collapse:collapse; border-spacing:0; }
 	width: 100%;
 	position: absolute;
 }
+
+.page-appear {
+    opacity: 0.01;
+    margin-left: 100%;
+    -webkit-transition: all 0.8s;
+    transition: all 8s;
+}
+
+.page-appear.page-appear-active {
+    margin-left: 0px;
+    opacity: 1;
+}
+
+.page-enter {
+    opacity: 0.01;
+    margin-left: 100%;
+    -webkit-transition: all 0.8s;
+    transition: all 8s;
+}
+
+.page-enter.page-enter-active {
+    margin-left: 0px;
+    opacity: 1;
+}
+
+.page-leave {
+    opacity: 1;
+    margin-left: 0px;
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+}
+
+.page-leave.page-leave-active {
+    margin-left: -100%;
+    opacity: 0.01;
+}
